Added new SVG icon, updated CSS and added blank JS file

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,6 +19,7 @@ body {
 svg {
   width: 100%;
   max-width: 15rem;
+  margin-bottom: 1.5rem;
 }
 
 form {
@@ -31,12 +32,12 @@ label {
 
 input[type='number'] {
   font-family: inherit;
-  background: rgb(230, 225, 225);
-
+  background: #e6e1e1;
   width: 80%;
   margin: 1rem 0;
   padding: .8rem;
   border: none;
+  border-radius: .5rem;
   font-size: 1.2rem;
   text-align: center;
 }
@@ -45,8 +46,8 @@ button {
   font-family: inherit;
   font-size: 1.4rem;
   font-weight: bolder;
-  width: 80px;
-  height: 80px;
+  width: 8rem;
+  height: 8rem;
   border: none;
   border-radius: 50%;
   background: #0ad9ff;
@@ -63,11 +64,10 @@ ul {
 
 li {
   padding: 1rem 1.5rem;
-  overflow: hidden;
   text-align: center;
-  border: 1px solid;
+  border: .1rem solid;
   overflow: hidden;
-  border-radius: 3px;
+  border-radius: .5rem;
 }
 
 .entriesWrapper {
@@ -100,6 +100,7 @@ li {
 @media screen and (min-width: 800px) {
   body {
     width: 60%;
+    max-width: 800px;
   }
 
   svg {
