--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -97,6 +97,38 @@ li {
   padding: 0 1rem;
 }
 
+.progress {
+  text-align: center;
+  padding-bottom: 1rem;
+}
+
+.progress h3 {
+  font-size: 1.6rem;
+  font-weight: lighter;
+}
+
+.progressCircleWrapper {
+  display: flex;
+  justify-content: center;
+}
+
+#progressCircle {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 25rem;
+  height: 25rem;
+  border-radius: 50%;
+  background: conic-gradient(#70db70 50%, #2d3740 50%);
+}
+
+#progressCenter {
+  width: 22rem;
+  height: 22rem;
+  border-radius: 50%;
+  background-color: #1c262f;
+}
+
 @media screen and (min-width: 800px) {
   body {
     width: 60%;
